[gd_scene load_steps=8 format=2]

[ext_resource path="res://sprites/bg.png" type="Texture" id=1]
[ext_resource path="res://Fonts/prstart.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/MenuScene.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 2 )

[node name="MenuScene" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 300, 400 )
scale = Vector2( 600, 800 )
texture = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="rtl_GameName" type="RichTextLabel" parent="CanvasLayer"]
margin_left = 76.0
margin_top = 48.0
margin_right = 497.0
margin_bottom = 167.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_text = "TIC TAC TOE
NETWORK TEST
PROJECT"
text = "TIC TAC TOE
NETWORK TEST
PROJECT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelPlayer" type="Panel" parent="CanvasLayer"]
margin_left = 73.0
margin_top = 180.0
margin_right = 515.0
margin_bottom = 272.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rtlPlayerName" type="RichTextLabel" parent="CanvasLayer/PanelPlayer"]
margin_left = 9.49829
margin_top = 8.95599
margin_right = 328.498
margin_bottom = 48.956
rect_pivot_offset = Vector2( -1034.16, -70.956 )
custom_fonts/normal_font = SubResource( 2 )
bbcode_text = "PLAYER NAME:"
text = "PLAYER NAME:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txtPlayerName" type="TextEdit" parent="CanvasLayer/PanelPlayer"]
margin_left = 10.0
margin_top = 39.0
margin_right = 339.0
margin_bottom = 79.0
custom_fonts/font = SubResource( 3 )

[node name="PanelHost" type="Panel" parent="CanvasLayer"]
margin_left = 76.0
margin_top = 282.0
margin_right = 519.0
margin_bottom = 430.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rtlCreateServer" type="RichTextLabel" parent="CanvasLayer/PanelHost"]
margin_left = 61.0
margin_top = 9.0
margin_right = 388.0
margin_bottom = 49.0
rect_pivot_offset = Vector2( -1034.16, -70.956 )
custom_fonts/normal_font = SubResource( 2 )
bbcode_text = "CREATE SERVER"
text = "CREATE SERVER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rtlPort" type="RichTextLabel" parent="CanvasLayer/PanelHost"]
margin_left = 7.99994
margin_top = 45.756
margin_right = 327.0
margin_bottom = 85.756
rect_pivot_offset = Vector2( -1034.16, -70.956 )
custom_fonts/normal_font = SubResource( 2 )
bbcode_text = "PORT:"
text = "PORT:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txtPort" type="TextEdit" parent="CanvasLayer/PanelHost"]
margin_left = 10.0
margin_top = 77.0
margin_right = 147.0
margin_bottom = 117.0
custom_fonts/font = SubResource( 3 )
text = "4445"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnHost" type="Button" parent="CanvasLayer/PanelHost"]
margin_left = 319.502
margin_top = 87.502
margin_right = 435.502
margin_bottom = 128.502
custom_fonts/font = SubResource( 4 )
text = "CREATE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelJoin" type="Panel" parent="CanvasLayer"]
margin_left = 74.0
margin_top = 442.0
margin_right = 517.0
margin_bottom = 690.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rtlJoinServer" type="RichTextLabel" parent="CanvasLayer/PanelJoin"]
margin_left = 87.9405
margin_top = 8.68091
margin_right = 414.94
margin_bottom = 48.6809
rect_pivot_offset = Vector2( -1034.16, -70.956 )
custom_fonts/normal_font = SubResource( 2 )
bbcode_text = "JOIN SERVER"
text = "JOIN SERVER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rtlIp" type="RichTextLabel" parent="CanvasLayer/PanelJoin"]
margin_left = 10.9405
margin_top = 45.6809
margin_right = 337.94
margin_bottom = 85.6809
rect_pivot_offset = Vector2( -1034.16, -70.956 )
custom_fonts/normal_font = SubResource( 2 )
bbcode_text = "IP ADDRESS:"
text = "IP ADDRESS:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txtIpAddress" type="TextEdit" parent="CanvasLayer/PanelJoin"]
margin_left = 14.0
margin_top = 75.0
margin_right = 270.0
margin_bottom = 115.0
custom_fonts/font = SubResource( 3 )
text = "127.0.0.1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rtlPort" type="RichTextLabel" parent="CanvasLayer/PanelJoin"]
margin_left = 9.99994
margin_top = 123.756
margin_right = 329.0
margin_bottom = 163.756
rect_pivot_offset = Vector2( -1034.16, -70.956 )
custom_fonts/normal_font = SubResource( 2 )
bbcode_text = "PORT:"
text = "PORT:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txtPort2" type="TextEdit" parent="CanvasLayer/PanelJoin"]
margin_left = 12.0
margin_top = 155.0
margin_right = 149.0
margin_bottom = 195.0
custom_fonts/font = SubResource( 3 )
text = "4445"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnJoin" type="Button" parent="CanvasLayer/PanelJoin"]
margin_left = 321.502
margin_top = 200.502
margin_right = 437.502
margin_bottom = 241.502
custom_fonts/font = SubResource( 4 )
text = "JOIN"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="CanvasLayer/PanelHost/btnHost" to="." method="_on_btnHost_pressed"]
[connection signal="pressed" from="CanvasLayer/PanelJoin/btnJoin" to="." method="_on_btnJoin_pressed"]
